crates/oct-llm-provider/tests/moonshot/snapshots/moonshot__fixtures__snapshot_parse_simple_text_stream_request.snap
---
source: tests/moonshot/fixtures.rs
expression: messages
---
- role: User
  parts:
    - Text: "Say \"hello\" in one word."
